// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendingDomainSection should render Left section 1`] = `
<Grid.Column
  lg={5}
  xs={12}
>
  <div
    className="Left"
  >
    Bill
    Brasky
  </div>
</Grid.Column>
`;

exports[`SendingDomainSection should render Right section 1`] = `
<Grid.Column
  lg={7}
  xs={12}
>
  <div
    className="Right"
  >
    Bill
    Brasky
  </div>
</Grid.Column>
`;

exports[`SendingDomainSection should render sending domain section 1`] = `
<Section
  title="Title"
>
  Bill
  Brasky
</Section>
`;
